package fit.iuh.common;

public interface Observer<T> {
  void update(T data);
}
